# dci-core-poll

./: CMakeLists.txt
include/dci/: poll.hpp
include/dci/poll/: api.hpp  awaker.hpp  descriptor.hpp  error.hpp  functions.hpp  timeout.hpp  timer.hpp  waitableTimer.hpp
include/dci/poll/descriptor/: native.hpp  readyStateFlags.hpp
src/: awaker.cpp  descriptor.cpp  error.cpp  functions.cpp  timer.cpp
src/impl/: awaker.cpp  awaker.hpp  awaking.cpp  awaking.hpp  clocking.cpp  clocking.hpp  descriptor.cpp  descriptor.hpp  polling.cpp  polling.hpp  service.cpp  service.hpp  timer.cpp  timer.hpp
src/impl/clocking/: bucket.cpp  bucket.hpp  bucketElement.hpp  config.hpp
src/impl/polling/: asyncSelect.cpp  asyncSelect.hpp  epoll.cpp  epoll.hpp
test/: complexRun.hpp  descriptor.cpp  instance.cpp  timer.cpp  waitableTimer.cpp
test/utils/: complexRun.hpp  pipe.cpp  pipe.hpp
